# Rust-Actix-Todo-Application

./: Cargo.toml  links.http  tables.sql
src/: database.rs  main.rs
src/routes/: create_user.rs  hello_user.rs  home.rs  mod.rs  todo.rs
static/: index.html  scripts.js  styles.css
